force-app/main/default/objects/ShipmentRequest__c/fields/Estimated_Delivety__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivety__c</fullName>
    <label>Estimated Delivety</label>
    <type>Date</type>
</CustomField>