force-app/main/default/objects/ShipmentRequest__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ShipmentRequests</relationshipName>
    <type>Lookup</type>
</CustomField>