force-app/main/default/objects/ShipmentRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned to Agent (In Review)</fullName>
            </value>
            <value>
                <fullName>In Review (Ready for Dispatch)</fullName>
            </value>
            <value>
                <fullName>Dispatch Failed(Ready for Dispatch)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>