force-app/main/default/objects/ShipmentRequest__c/fields/Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID__c</fullName>
    <label>Tracking ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>